<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".submission.ProjectSubmission">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/project_submission_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/min_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_icon_back" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:src="@drawable/gads"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.275"
                    app:layout_constraintStart_toEndOf="@+id/icon_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                android:text="Project Submission"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                android:background="@drawable/appbar_gradient_line" />

        </LinearLayout>
²
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/first_name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2.5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="0.5"
                android:background="@drawable/edittext_background"
                android:hint="@string/first_name_edittext_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColorHint="@color/textColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2.5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_weight="0.5"
                android:background="@drawable/edittext_background"
                android:hint="@string/last_name_edittext_hint"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColorHint="@color/textColor"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/email_address_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:hint="@string/email_address_edittext_hint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/github_link_name_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/github_link_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/project_on_github_link_edittext_hint"
                android:inputType="textWebEditText"
                android:singleLine="true"
                android:textColorHint="@color/textColor"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/submit_project_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_address_edittext" />

            <Button
                android:id="@+id/submit_project_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/submit_project_button_background"
                android:padding="@dimen/min_margin"
                android:text="@string/submit_button_text"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/github_link_name_edittext" />

            <ProgressBar
                android:id="@+id/my_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:indeterminateTint="@color/orange"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>